<resources>
    <string name="app_name">券乐多</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    //network
    <string name="no_data">暂无数据</string>
    <string name="network_err">网络异常，请检查网络</string>
    //login
    <string name="rewrite">请正确输入手机号或密码</string>
    <string name="rewrite_code">请正确输入验证码</string>
    <string name="rewrite_notsame">两次密码不同，请重新输入</string>
    <string name="rewrite_tgid">请正确输入邀请人Id</string>
    <string name="username">用户名</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="pwdagain">确认密码</string>
    <string name="inviter">邀请人(必填)</string>
    <string name="login">立即登录</string>
    <string name="regist">立即注册</string>
    <string name="yanzhengma">验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    //main
    <string name="draweropen">打开侧边栏</string>
    <string name="drawerclose">关闭侧边栏</string>
    <string name="title_trend">近期体检结果趋势</string>
    <string name="title_healthymanage">健康管理</string>
    <string name="title_weather">今日天气</string>

    <!-- chat str-->
    <string name="bqmm_downloaded">&#160;%s %%</string>
    <string name="bqmm_downloaded_en">&#160;%s %%</string>
    <!-- 商店页面加载失败提示内容 -->
    <string name="bqmm_shop_network_error_text">页面加载失败，请检查网络后重试</string>
    <!-- 表情键盘初始化失败提示内容 -->
    <string name="bqmm_keyboard_network_error_text">表情键盘初始化失败，请检查网络后重试</string>
    <!-- 重新加载按钮的内容 -->
    <string name="bqmm_reload_button_text">重新加载</string>
    <!-- 点击刷新按钮的内容 -->
    <string name="bqmm_refresh_button_text">点击刷新</string>
    <!-- 单表情详情页表情包加载失败提示内容 -->
    <string name="bqmm_failed_get_package_text">获取表情包信息失败</string>
    <!-- 删除表情时提示语 -->
    <string name="bqmm_delete_package_text">删除中...</string>



    <!-- 商店页面加载失败提示内容 -->
    <string name="bqmm_shop_network_error_text_en">Loading failed, please check your network and connect later</string>
    <!-- 表情键盘初始化失败提示内容 -->
    <string name="bqmm_keyboard_network_error_text_en">Initialize failed, please check your network and connect later</string>
    <!-- 重新加载按钮的内容 -->
    <string name="bqmm_reload_button_text_en">Reload</string>
    <!-- 点击刷新按钮的内容 -->
    <string name="bqmm_refresh_button_text_en">Try Again</string>
    <!-- 单表情详情页表情包加载失败提示内容 -->
    <string name="bqmm_failed_get_package_text_en">Failed to get sticker pack</string>
    <!-- 删除表情时提示语 -->
    <string name="bqmm_delete_package_text_en">deleting...</string>

    <!--会话界面-->
    <string name="send">发送</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="red_pack">红包</string>
    <string name="album">相册</string>


    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="voice_failure">录音失败！</string>
    <string name="send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <!--userinfo-->
    <string name="userinfo_tgbtnstr">推广员申请</string>
    <string name="userinfo_buystr">购买</string>
    <string name="userinfo_howmuch">请输入购买数量</string>
    <string name="userinfo_paymoney_content_null">请正确输入购买数量</string>
    <!--gameinfo-->
    <string name="gameinfo_biao">参加竞猜</string>
    <string name="gameinfo_biao_short">竞猜</string>
    <string name="gameinfo_biao_title">幸运猜猜猜</string>
    <string name="gameinfo_biao_content">请输入您认为最准确的幸运数字</string>
    <string name="gameinfo_biao_content_null">请正确输入幸运数字</string>
    <string name="gameinfo_biao_ok">确定</string>
    <string name="gameinfo_biao_cancel">取消</string>
    <string name="gameinfo_biao_notstart">本次竞猜尚未开始，请稍等</string>
    <!--shoppinginfo-->
    <string name="shopping_ticketnotenough">你的账户优惠券不足，请充值</string>
</resources>
