<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#2098fe"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_banner"
        />

    <EditText
        android:id="@+id/username"
        style="@style/EdittextStyle"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="text"
        android:text="13722852917"
        android:drawableLeft="@drawable/login_img_user"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_bg1"
        />


    <EditText
        android:id="@+id/pwd"
        style="@style/EdittextStyle"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="123456"
        android:drawableLeft="@drawable/login_img_password"
        android:hint="@string/pwd"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_bg1"
        android:drawableRight="@drawable/login_img_eye"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_marginTop="53dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_middle"
        android:background="@drawable/button_bg"/>
    <TextView
        android:id="@+id/tryit"
        android:layout_marginTop="20dp"
        android:textColor="#0a5a9d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/regist_btn"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_marginTop="13dp"
        android:text="@string/regist"
        android:textColor="@color/black"
        android:textSize="@dimen/text_middle"
        android:background="@drawable/button_bg"/>
</LinearLayout>