<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal">
    <EditText
        android:id="@+id/tx_zfb"
        style="@style/EdittextStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:padding="@dimen/dp_10"
        android:ems="10"
        android:inputType="text"
        android:hint="支付宝账号"
        android:textColorHint="#cbcbcb"
        android:background="@drawable/edit_regist"
        />

    <EditText
        android:id="@+id/tx_phone"
        style="@style/EdittextStyle"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/phone"
        android:textColorHint="#cbcbcb"
        android:background="@drawable/edit_regist"
        />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tx_yzm"
            style="@style/EdittextStyle"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/yanzhengma"
            android:textColorHint="#cbcbcb"
            android:background="@drawable/edit_regist"
            />
        <Button
            android:id="@+id/txbtn_verifycode"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/huoquyanzhengma"
            android:textColor="#828282"
            android:background="@drawable/edit_btn"/>

    </RelativeLayout>
    <View
        android:background="#828282"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="45dp"
        android:text="提交"
        android:textColor="@color/white"
        android:textSize="@dimen/text_middle"
        android:background="@drawable/btn_login_bg"/>

</LinearLayout>